# crud-fastapi-postgres-streamlit

./: .gitignore  README.md  database.db  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  crud.py  main.py
backend/databases/: database.py
backend/models/: __init__.py  product.py
backend/routers/: router.py
backend/schemas/: schema.py
frontend/: Dockerfile  app.py
frontend/.streamlit/: config.toml
