[tool.poetry]
name = "crud-fastapi-postgres-streamlit"
version = "0.1.0"
description = ""
authors = ["DellaCortef <felipe.dellacorte@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.22"
pydantic = {extras = ["email"], version = "^2.10.4"}
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
psycopg2 = "^2.9.10"
psycopg-binary = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
